<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ux.MainActivity">

    <TextView
        android:id="@+id/select_currency_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_medium"
        android:layout_marginStart="@dimen/margin_left_medium"
        android:layout_marginEnd="@dimen/margin_right_medium"
        android:text="@string/select_currency_to_convert"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/select_currency_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="@+id/select_currency_text_view"
        app:layout_constraintStart_toStartOf="@+id/select_currency_text_view"
        app:layout_constraintTop_toBottomOf="@+id/select_currency_text_view" />

    <TextView
        android:id="@+id/select_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="@dimen/text_size_small"
        android:text="@string/select_a_product"
        app:layout_constraintEnd_toEndOf="@+id/select_currency_text_view"
        app:layout_constraintStart_toStartOf="@+id/select_currency_text_view"
        app:layout_constraintTop_toBottomOf="@+id/select_currency_spinner" />

    <Spinner
        android:id="@+id/products_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/margin_top_small"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="@+id/select_currency_text_view"
        app:layout_constraintStart_toStartOf="@+id/select_currency_text_view"
        app:layout_constraintTop_toBottomOf="@+id/select_product" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/transaction_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/total_sum_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/products_spinner"
        tools:listitem="@layout/transaction_row" />

    <TextView
        android:id="@+id/total_sum_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/total_sum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/loadingLayout"
        layout="@layout/loader_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>